--- a/package.json
+++ b/package.json
@@ -1,24 +1,31 @@
 {
-    "name": "web-crawler",
-    "version": "1.0.0",
-    "description": "Crawler captura informações automática de um site, usando Node.js",
-    "main": "spider.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/silvanoamaral/web-crawler.git"
-    },
-    "author": "Silvano Amaral",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/silvanoamaral/web-crawler/issues"
-    },
-    "homepage": "https://github.com/silvanoamaral/web-crawler#readme",
-    "dependencies": {
-        "cheerio": "^0.22.0",
-        "fs": "0.0.1-security",
-        "request": "^2.81.0"
-    }
+  "name": "web-crawler",
+  "version": "1.0.0",
+  "description": "Crawler captura informações automática de um site, usando Node.js",
+  "main": "spider.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/silvanoamaral/web-crawler.git"
+  },
+  "author": "Silvano Amaral",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/silvanoamaral/web-crawler/issues"
+  },
+  "homepage": "https://github.com/silvanoamaral/web-crawler#readme",
+  "dependencies": {
+    "cheerio": "^0.22.0",
+    "express": "^4.15.2",
+    "fs": "0.0.1-security",
+    "request": "^2.81.0"
+  },
+  "devDependencies": {
+    "gulp": "^3.8.11",
+    "gulp-connect-multi": "^1.0.8",
+    "gulp-jade": "^0.11.0",
+    "gulp-stylus": "^2.0.0"
+  }
 }
