--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   "devDependencies": {
     "gulp": "^3.8.11",
     "gulp-connect-multi": "^1.0.8",
+    "gulp-htmlclean": "^2.7.11",
     "gulp-jade": "^0.11.0",
+    "gulp-replace": "^0.5.4",
     "gulp-stylus": "^2.0.0"
   }
 }
